# rust_graphql_scylladb_final

./: .env  .gitignore  Cargo.toml  README.md  schema.graphql  schema_lectura.cql
src/: db.rs  graphql.rs  main.rs
