[package]
name = "rust_graphql_scylladb"
version = "0.1.0"
edition = "2024"
authors = ["Victor Aguayo"]

[dependencies]
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
tokio = { version ="1.44.2", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
scylla = "1.1.0"
anyhow ={ version = "1.0", features = ["std"] } 
futures = "0.3.31"

log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
